# replited

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.dev  README.md  RELEASE_NOTES_v0.3.2.md  RELEASE_NOTES_v0.3.3.md  RELEASE_NOTES_v0.3.4.md  RELEASE_NOTES_v0.3.5.md  config.md  deny.toml  primary.toml
.github/workflows/: azblob_integration_test.yml  branch_docker_image.yml  dependency_policy.yml  docker_publish.yml  fs_integration_test.yml  fuzz.yml  gcs_integration_test.yml  release.yml  s3_integration_test.yml  sidecar_battle_test.yml  tag.yaml  unit_test.yml
docs/: sidecar-config.md  stream-copy-config.md  stream-replication.md
docs/benchmarks/: 2026-03-21-ltx-vs-manifest-results.md
docs/plans/: 2026-02-09-release-v0.3.4.md  2026-03-10-replica-bootstrap-hardening.md  2026-03-11-archival-cache-object-backends-pr-plan.md  2026-03-11-archival-cache-object-backends.md  2026-03-11-manifest-only-breaking-cut.md  2026-03-21-ltx-vs-manifest-benchmark-plan.md  2026-05-05-managed-reader-generation-handoff.md
docs/specs/: 2026-03-21-ltx-vs-manifest-design.md
etc/: sample.toml
example/: README.md  docker-compose.alt.yml  docker-compose.override.yml  docker-compose.yml  replica.Dockerfile  run_pocketbase_live_demo.sh  verify_pocketbase.py
example-trailbase/: README.md  docker-compose.yml  replica.Dockerfile  verify_trailbase.py
example-trailbase/config/: primary.toml  replica.toml
example/config/: primary.host.toml  primary.toml  replica.host.toml  replica.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: checksum.rs  decompress.rs  path_parser.rs  wal_parser.rs
proto/: replication.proto
replica_cwd/: replica.toml
src/: lib.rs  main.rs  pb.rs
src/base/: compress.rs  file.rs  generation.rs  mod.rs  string.rs
src/cmd/: command.rs  mod.rs  purge_generation.rs  replica_sidecar.rs  replicate.rs  restore.rs
src/config/: arg.rs  config.rs  mod.rs  storage_params.rs
src/database/: database.rs  mod.rs
src/error/: backtrace.rs  error.rs  error_code.rs  error_into.rs
src/experimental/: ltx_compare.rs  mod.rs
src/log/: log.rs
src/sqlite/: common.rs  mod.rs  schema_hash.rs  wal_frame.rs  wal_header.rs
tests/: .gitignore  battle_test.py  continuous_restore_test.py  integration_test.py  ltx_compare_test.rs  primary.toml  release_e2e.py  replica.toml  replication_pb2.py  replication_pb2_grpc.py  restore_output_set.rs  simple_replication.py  test_utils.py  verify_full_flow.py
(+63 files in other folders)
