[package]
name = "replited-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
replited = { path = "..", default-features = false }


[[bin]]
name = "checksum"
path = "fuzz_targets/checksum.rs"
test = false
doc = false
bench = false
