[package]
name = "replited-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
replited = { path = "..", default-features = false }


[[bin]]
name = "checksum"
path = "fuzz_targets/checksum.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wal_parser"
path = "fuzz_targets/wal_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decompress"
path = "fuzz_targets/decompress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "path_parser"
path = "fuzz_targets/path_parser.rs"
test = false
doc = false
bench = false
